# ESP32_Based_WearableDevice_Project

./: README.md
Backend/: esp_server_bluetooth.c  esp_server_wifi.c
Backend/Code_For_Testing_Throughput/: esp_server_bluetooth_data_throughput.c  esp_server_bluetooth_data_throughput_senddata.c  esp_server_wifi_data_throughput_receive_data.c  esp_server_wifi_data_throughput_senddata.c
ESP32_Device_Code/main/: CMakeLists.txt  app_adxl345.c  app_bluetooth.c  app_camera.c  app_client.c  app_main.c  app_mic.c  app_tcp.c  app_tcp_wifi.c
ESP32_Device_Code/main/include/: app_adxl345.h  app_bluetooth.h  app_tcp.h  app_tcp_wifi.h
ESP32_Device_Code/main/include/resize_image/: img_resize.c  img_resize.h  t3.c  t5.c
ESP32_Device_Code/main/include/resize_image/stb_image/: stb_image_write.h
